--- a/css/style.css
+++ b/css/style.css
@@ -14,15 +14,10 @@
 
     
 }
-
-input{
-    outline:none;
-}
 * {
     box-sizing: border-box;
 }
 
->>>>>>> 50f8623 ( edit responsive)
 body{
     background-color: var(--main-color);
     color: var(--primary-text-color);
@@ -163,6 +158,8 @@ input{
     outline: none;
 }
 .navbar {
+    display: flex;
+    flex-direction: row;
     width: 100%;
     max-width: 100vw;
     position: fixed;
@@ -175,6 +172,10 @@ input{
     font-family: poppins-black;
     font-weight: bolder;
 
+}
+.d-flex{
+    display: flex;
+    flex-direction: row;
 }
 .pixel-logo{
     width: 150px;
@@ -191,7 +192,7 @@ input{
     height: 50px;
     position: fixed;
     margin-left: 20px;
-    top: 5px;
+    top: 32px;
     right: 30%;
     z-index: 9999999;
     border-radius: 10px;
@@ -219,7 +220,7 @@ input{
     height: 50px;
     position: fixed;
     margin-left: 20px;
-    top: 5px;
+    top: 32px;
     left: 5px;
     z-index: 9999999;
     border-radius: 10px;
@@ -793,143 +794,143 @@ background-color: var(--secondary-text-color);
 
 /*-----------------------------------contact start----------------------*/
 
+/* Contact Section */
 .contact {
     width: 100%;
-    height: auto;
-}
-.contact .contact-container{
+    padding: 20px;
+  }
+  
+  .contact-container {
     width: 100%;
-    height: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
     padding: 25px;
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-.contact .contact-container .contact-content{
-    width: 600px;
-    height: 300px;
+  }
+  
+  .contact-content {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
     background-image: url(../imgs/map.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 1; 
-    position: relative;
-    box-shadow: 2px 5px 10px gray;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     border-radius: 25px;
-    margin-top: 40px;
-    display: flex;
-    flex-direction: row;
-    z-index: 222;
-       /* background-color: var(--main-cards-color); */
-}
-.contact .contact-container .contact-content:after{
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .contact-content:before {
     content: "";
     width: 100%;
     height: 100%;
     position: absolute;
-    left: 0;
     top: 0;
-    background-color:var(--main-cards-color);
-    opacity: 0.7;
-    border-radius: 25px;
-    z-index: 333;
-}
-.contact .contact-container .contact-content.white-mode:after{
-    background-color: var(--primary-text-color);
-    opacity: 1;
-}
-.contact .contact-container .contact-content .left-contact{
-    width: 50%;
-    height: 100%;
-    position: relative;
-    z-index: 6666;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+  }
+  
+  .left-contact,
+  .right-contact {
+    padding: 20px;
+    flex: 1 1 45%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    align-content: flex-start;
-    justify-content: space-around;
-
-
-}
-.contact .contact-container .contact-content .left-contact .social{
-    width: 90%;
-    height: 30px;
-    padding: 0 20px;
-    margin: 0 10px;
-    overflow: hidden;
+    justify-content: center;
+    position: relative;
+    z-index: 2;
+  }
+  
+  .left-contact {
+    justify-content: space-evenly;
+  }
+  
+  .left-contact h2 {
+    font-size: 1.5rem;
+    color: #fff;
+  }
+  
+  .social {
     display: flex;
     align-items: center;
+    margin: 10px 0;
     color: #00b0f5;
-    flex-direction: row;
-    justify-content: space-between;
-    font-weight: bolder;
-
-
-}
-.contact .contact-container .contact-content .left-contact .social img{
+  }
+  
+  .contact-media {
     width: 30px;
     height: 30px;
-   
-}
-.contact .contact-container .contact-content .right-contact{
-    width: 230px;
-    height: 280px;
-    background-color: var(--secondary-text-color);
-    z-index: 444;
-    position: relative;
-    top: -20px;
-    border-radius: 0 0 25px 25px;
-}
-.contact .contact-container .contact-content .right-contact.white-mode{
-    background-color: var(--primary-button-color);
-}
-.contact .contact-container .contact-content .right-contact form{
+    margin-right: 10px;
+  }
+  
+  .cont-media {
+    display: none;
+  }
+  
+  .cont-media.open {
+    display: flex;
+  }
+  
+  .right-contact {
+    background-color: #2c3e50;
+    border-radius: 25px;
+    margin-top: 20px;
+    z-index: 2;
+  }
+  
+  form {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin-top: 30px;
-    justify-content: space-between;
-
-}
-.contact .contact-container .contact-content .right-contact form input{
-    margin-bottom: 10px;
-    border-radius: 5px;
+    gap: 10px;
+    color: #fff;
+  }
+  
+  form input,
+  form textarea {
+    padding: 10px;
+    border-radius: 8px;
     border: none;
-    width: 200px;
-}
-.contact .contact-container .contact-content .right-contact form textarea{
-    width: 200px;
-    border-radius: 10px;
-    height: 80px;
-    margin-bottom: 8px;
-
-}
-.contact .contact-container .contact-content .right-contact form .submit{
-    width: 120px;
-    border-radius: 8px 0 0 8px;
-    box-shadow: 0px 0px 1px gray;
-    position: absolute;
-    right: 0;
-    bottom: 10px;
-    background-color: black;
-    color: white;
-    transition: all 0.2s linear;
-}
-.contact .contact-container .contact-content .right-contact form .submit:hover{
-    width: 130px;
-}
-.contact-media{
+    width: 100%;
+    box-sizing: border-box;
+  }
+  
+  form textarea {
+    height: 120px;
+  }
+  
+  .submit {
+    background-color: #3498db;
+    color: #fff;
+    padding: 12px 20px;
+    border-radius: 8px;
     cursor: pointer;
-    transition: all 0.5s linear;
-}
-.contact-media:hover{
-    transform: scale(1.2);
-}
-.cont-media {
-    display: none;
-} 
-.cont-media.open{
-    display: flex;
-}
+    transition: background-color 0.3s ease;
+  }
+  
+  .submit:hover {
+    background-color: #2980b9;
+  }
+  
+  /* Responsive Design */
+  @media (max-width: 768px) {
+    .contact-content {
+      flex-direction: column;
+    }
+  
+    .left-contact, .right-contact {
+      flex: 1 1 100%;
+      margin-bottom: 20px;
+    }
+  
+    .submit {
+      width: 100%;
+    }
+  }
+  
 /*-----------------------------------contact end----------------------*/
 /*-----------------------------------footer start----------------------*/
 footer{
