--- a/css/style.css
+++ b/css/style.css
@@ -291,6 +291,7 @@ input{
     margin-bottom: 20px;
     line-height: 40px;
     font-size: 36px;
+    word-spacing: 18px;
 
 }
 #home .container .content p{
